--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
 # C extensions
 *.so
 
@@ -14,8 +13,10 @@ dist/
 downloads/
 eggs/
 .eggs/
+bin/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
@@ -160,3 +161,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+VayBe/vaybe/settings.py
