--- a/VayBe/requirements.txt
+++ b/VayBe/requirements.txt
@@ -1,7 +1,31 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+cssbeautifier==1.15.1
 Django==5.1.2
+django-ckeditor-5==0.2.15
+django-cors-headers==4.6.0
+django-debug-toolbar==4.4.6
+django-js-asset==2.2.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+djlint==1.36.3
+EditorConfig==0.12.4
+idna==3.10
+jsbeautifier==1.15.1
+json5==0.10.0
 mariadb==1.1.10
 mysqlclient==2.2.4
 packaging==24.1
+pathspec==0.12.1
+pillow==11.0.0
+PyJWT==2.10.1
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+six==1.16.0
 sqlparse==0.5.1
-djangorestframework==3.15.2
+tqdm==4.67.1
+urllib3==2.2.3
