--- a/VayBe/requirements.txt
+++ b/VayBe/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 djlint==1.36.3
 EditorConfig==0.12.4
+gunicorn==23.0.0
 idna==3.10
 jsbeautifier==1.15.1
 json5==0.10.0
