--- a/VayBe/requirements.txt
+++ b/VayBe/requirements.txt
@@ -1,32 +1,64 @@
-asgiref==3.8.1
-certifi==2024.12.14
-charset-normalizer==3.4.0
-click==8.1.7
+argcomplete==2.0.0
+attrs==22.2.0
+blinker==1.5
+Brlapi==0.8.4
+certifi==2022.9.24
+chardet==5.1.0
+charset-normalizer==3.0.1
+click==8.1.3
 colorama==0.4.6
-cssbeautifier==1.15.1
-Django==5.1.2
-django-ckeditor-5==0.2.15
-django-cors-headers==4.6.0
-django-debug-toolbar==4.4.6
-django-js-asset==2.2.0
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-djlint==1.36.3
-EditorConfig==0.12.4
-gunicorn==23.0.0
-idna==3.10
-jsbeautifier==1.15.1
-json5==0.10.0
-mariadb==1.1.10
-mysqlclient==2.2.4
-packaging==24.1
-pathspec==0.12.1
-pillow==11.0.0
-PyJWT==2.10.1
-PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
+cryptography==38.0.4
+cupshelpers==1.0
+dbus-python==1.3.2
+distlib==0.3.6
+distro==1.8.0
+distro-info==1.5+deb12u1
+filelock==3.9.0
+gyp==0.1
+httplib2==0.20.4
+idna==3.3
+iniconfig==1.1.1
+joblib==1.2.0
+lazr.restfulclient==0.14.5
+lazr.uri==1.0.6
+louis==3.24.0
+Mako==1.2.4.dev0
+MarkupSafe==2.1.2
+more-itertools==8.10.0
+mysqlclient==1.4.6
+nltk==3.8
+oauthlib==3.2.2
+packaging==23.0
+pipx==1.1.0
+platformdirs==2.6.0
+pluggy==1.0.0+repack
+psutil==5.9.4
+py==1.11.0
+pycairo==1.20.1
+pycups==2.0.1
+pycurl==7.45.2
+Pygments==2.14.0
+PyGObject==3.42.2
+PyJWT==2.6.0
+pyparsing==3.0.9
+PySimpleSOAP==1.16.2
+pysmbc==1.0.23
+pytest==7.2.1
+python-apt==2.6.0
+python-dateutil==2.8.2
+python-debian==0.1.49
+python-debianbts==4.0.1
+pyxdg==0.28
+PyYAML==6.0
+regex==2022.10.31
+reportbug==12.0.0
+requests==2.28.1
+simplejson==3.18.3
 six==1.16.0
-sqlparse==0.5.1
-tqdm==4.67.1
-urllib3==2.2.3
+tqdm==4.64.1
+urllib3==1.26.12
+urwid==2.1.2
+userpath==1.8.0
+virtualenv==20.17.1+ds
+wadllib==1.3.6
+xdg==5
