--- a/VayBe/vaybe/.env-example
+++ b/VayBe/vaybe/.env-example
@@ -1,8 +1,9 @@
-SECRET_KEY=<Your secret key>
+SECRET_KEY=<Your secret key >
 DEBUG_MODE=True
-DATABASE_NAME=<Your database name: db_name>
-DATABASE_USER=<Your database user name: db_user_login>
-DATABASE_PASS=<Your database password: db_user_password>
-DATABASE_HOST=<Your datbase host name: localhost>
+DATABASE_NAME=<Your database name: db_name >
+DATABASE_USER=<Your database user name: db_user_login >
+DATABASE_PASS=<Your database password: db_user_password >
+DATABASE_HOST=<Your datbase host name: localhost >
 DATABASE_PORT=<you database port: 3306>
-ALLOWED_HOSTS=<The host allowed to run your app: localhost>
+ALLOWED_HOSTS=<The host allowed to run your app: localhost >
+BASE_URL=<The host of the scheduling api: http://localhost:8080 >
